json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,159 @@
 {
  "items": [
   {
+    "id": "wwAA6iEPQQejiJPejjBoVg",
+    "url": "https://jobmote.com/job/4577429/p-c-insurance-agent-wanted-best-work-from-home-opportunity/",
+    "title": "P&C insurance agent wanted - best work from home opportunity",
+    "tags": [
+      "DBG:surround``3N( OR(feasibl,OR(consid,consider),option,occas,opportun,possibl,abil), OR(3N(remot, work),telecommut,2N(work,home)) ) NOT OR(regularli, abracadabra)",
+      "DBG_TECH1:k/t/w:c/c/15",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=15, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/c",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "c"
+    ],
+    "hiringOrganization": {
+      "name": "Assurance",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Apr 25, 2020 3:22:05 AM",
+    "validThrough": "Apr 28, 2020 3:22:05 AM",
+    "crawled": "Apr 25, 2020 4:05:12 AM",
+    "content": "<div><p><span>Assurance is the first and only platform to pair top insurance agents with data-driven technology to make the buying and selling experience timely, personalized, and simple.</span></p><p><span>Enjoy the freedom of working for yourself, and leave the marketing and admin work to ASSURANCE.</span></p><p><span>Join the ASSURANCE agent network, and enjoy these benefits::</span></p><ul><li><span>100% qualified, inbound shoppers generated from ASSURANCE-owned and operated websites</span></li><li><span>Free access to our proprietary system</span></li><li><span>Well-known and trusted carriers</span></li><li><span>100s of Guides prospecting for you</span></li><li><span>A+ BBB-accredited and proven</span></li><li><span>Unlimited income potential with no chargebacks and weekly bonus opportunities</span></li><li><span>Daily support meetings (voluntary)</span></li></ul><p><span>Requirements to access ASSURANCE platform:</span></p><ul><li><span>At least 10 P&amp;C state licenses, 8 of which should be in AR, AZ, CO, CT, IA, ID, IL, IN, MO, MS, NC, ND, NE, NM, OH, OK, OR, PA, SC, SD, TN, TX, UT, VA, WI, WV, WY</span></li><li><span>At least 1 year of telesales experience selling P&amp;C products</span></li><li><span>Prior work as a captive agent or in an independent agency or call center</span></li><li><span>Very reliable computer and headset</span></li><li><span>High speed Internet connection</span></li><li><span>Self-driven and hungry</span></li><li><span>Able to establish yourself as an expert and provide policy guidance with the highest integrity</span></li><li><span>Persistence and systematic in the follow up to chase down shoppers after the first call</span></li><li><span>Active errors &amp; omissions coverage</span></li><li><span>Experience with multiple carrier products and using a comparative rater is a preferred</span></li></ul></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "O_SrU6m1R6ea3tlGiUpc4Q",
+    "url": "https://jobmote.com/job/4577428/telecommute-bilingual-serbian-medical-translator/",
+    "title": "Telecommute Bilingual Serbian Medical Translator",
+    "tags": [
+      "DBG:surround``3N(telecommut, posit) NOT fulltim",
+      "REMOTE1/50",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "VirtualVocations",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Apr 25, 2020 3:22:05 AM",
+    "validThrough": "Apr 28, 2020 3:22:05 AM",
+    "crawled": "Apr 25, 2020 4:05:12 AM",
+    "content": "<div>A translation and localization company is searching for a person to fill their position for a Telecommute Bilingual Serbian Medical Translator.Core Responsibilities Include:Translating and editing of content related to medical devicesProcessing proximately 5000 words per weekApplicants must meet the following qualifications:3+ years experience in translation and/or editing of medical devicesProficient use of CAT tools, especially memoQ/Memsource/XTMReliable, high-speed internet connection</div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "BiMXAItqTsus4pT4OxWpfA",
+    "url": "https://jobmote.com/job/4557456/port-saint-lucie-fl-work-from-home-telephonic-healthcare-patient-support-representative/",
+    "title": "Port Saint Lucie, FL - Work from Home Telephonic Healthcare Patient Support Representative",
+    "tags": [
+      "DBG:surround``3N( OR(feasibl,OR(consid,consider),option,occas,opportun,possibl,abil), OR(3N(remot, work),telecommut,2N(work,home)) ) NOT OR(regularli, abracadabra)",
+      "DBG:surround``from 4W your 2W home",
+      "DBG_TECH1:k/t/w:air/frontend/8",
+      "DBG_TECH1:k/t/w:air/mobile/8",
+      "DBG_TECH1:k/t/w:internet-explorer/frontend/2",
+      "DBG_TECH1:k/t/w:macos/apple/4",
+      "DBG_TECH1:k/t/w:windows/dotnet/96",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=96, c=0, mobile=8, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=4, java=0, gamedev=0, php=0, embedded=0, frontend=10}",
+      "REMOTE1/50",
+      "TECH1/dotnet",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "dotnet"
+    ],
+    "hiringOrganization": {
+      "name": "Stride 2 Hire Staffing Agency",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Apr 25, 2020 2:58:48 AM",
+    "validThrough": "Apr 28, 2020 2:58:48 AM",
+    "crawled": "Apr 25, 2020 3:05:11 AM",
+    "content": "<div><span></span><h5><span><span><span><span>Healthcare</span></span></span></span><br></h5><h5><span><span><span><span>Patient Support&nbsp;Calls</span></span></span></span><br></h5><p><span><span><span><span><span><span><span><span><b><span><span><span>Medical&nbsp;Experience Preferred</span></span></span></b></span></span></span></span></span></span></span></span><br></p><br><p><span><span><span><span><span><b><span><span>Job ID# A2002</span></span></b></span></span></span></span></span><br></p><p><span><span><span><span>&nbsp;</span></span></span></span><br></p><p><span><span><span><span>Leverage your customer service expertise and Medical knowledge to provide the latest in TeleHealth Solutions by helping to enroll patients in an online and on demand healthcare delivery service that's transforming the world of medicine, all from the comfort of your own home!&nbsp;</span></span></span></span><br></p><p><span><span><span><span>&nbsp;</span></span></span></span><br></p><p><span><span><span><span>About Parkes &amp; Co.</span></span></span></span><br></p><p><span><span><span><span>&nbsp;</span></span></span></span><br></p><p><span><span><span><span>Parkes &amp; Co. connects small call center companies, run by people like you, to prestigious Fortune 500 clients through a virtual platform. Parkes &amp; Co. provides the clients, you&nbsp;provide&nbsp;the service. YOU have the power to choose your clients, and schedule from the comfort of your own home. You have the opportunity to live your<span>&nbsp;</span><span><span><b><span>work from home<span>&nbsp;</span></span></b></span></span>dream. When you own your own business, you’re the boss.</span></span></span></span><br></p><p><span><span><span><span>&nbsp;</span></span></span></span><br></p><h3><span><span>WHAT TO EXPECT:</span></span><br></h3><p><span><span><span><span>&nbsp;</span></span></span></span><br></p><p><span><span><span><span>What’s Needed to Provide Customer Support for this Client<br><br>- Assisting callers with enrollment inquiries<br>- Determining offerings customers are missing<br>- Explain offered services and benefits</span></span></span></span></p><h3><span></span><br></h3><h3><span><span>WHAT IT TAKES TO SUCCEED:</span></span><br></h3><p><span><span><span><span><span></span></span></span></span></span><br></p><p><span><span><span><span>Must-Have Qualities and Capabilities<br><br>- Familiarity with medical terms and healthcare industry</span></span></span></span></p><p><span><span><span><span>- Familiarity with company processes and policies<br>- Clear, confident and professional communication skills to build trust and rapport<br>- Understanding of “patient call flow”<br>- Quick-thinking management of patient needs<br>- Assertiveness to promote additional products and services<br>- Empathy and a sincere desire to assist and prioritize the patient<br>- Tenacity to understand and deliver on patients’ needs</span></span></span></span></p><h3>&nbsp;<br></h3><h3><span><span>EDUCATION NECESSARY:</span></span><br></h3><p><span><span><span><span><span></span></span></span></span></span><br></p><p><span><span><span><span>No degrees necessary - great work from home opportunity for anyone who is ready to start a business and be their own</span></span></span></span><br></p><p><span><span><span><span>boss.</span></span></span></span><br></p><h3><span></span><br></h3><h3><span><span>WHAT YOU'LL BE DOING:</span></span><br></h3><p><span><span><span><span><span></span></span></span></span></span><br></p><p><span><span><span><span>Providing great inbound, patient inquiry and enrollment service calls.</span></span></span></span><br></p><h3><span></span><br></h3><h3><span><span>WHAT YOU NEED TO GET STARTED:</span></span><br></h3><p><span><span><span><span><span></span></span></span></span></span><br></p><p><span><span><span><span>- Apply</span></span></span></span><br></p><p><span><span><span><span>- A Computer</span></span></span></span><br></p><p><span><span><span><span>- High Speed wired Internet&nbsp; (No WiFi)</span></span></span></span><br></p><p><span><span><span><span>- Phone with headset</span></span></span></span><br></p><p><span><span><span><span>- Pass a background screening<br><br>This is not an offer of employment. It is an opportunity to enter into a business-to-business relationship with</span></span></span></span></p><p><span><span><span><span>Parkes &amp; Co..</span></span></span></span><br></p><br><span></span><h3>Requirements</h3><b>Background Screening</b><br><br>• Have no felonies or fraudulent behaviors.<br><br><b>PC Requirements </b><br><br>• A desktop/tower computer with a separate monitor is recommended.<br>• Dual boot machines, Netbooks, and Tablets are prohibited from use.<br>• All-in-One computers are not currently compatible with any client programs.<br><br><br><ul><li>CPU Speed<br><ul><li>Dual-core 2.8 GHz or better&nbsp;or<br></li><li>Intel i class or AMD Phenom X2 class or better<br></li><li>Atom, Celeron, Pentium and Opteron processors are notpermitted<br></li></ul></li><li>Hard Drive 20 GB or more of available space<br><ul><li>60 GB or more of total space<br></li></ul></li><li>Memory 4 GB of RAM or better<br></li><li>Operating System Windows 7 or Windows 10<br><ul><li>Windows 8/8.1 not supported by some clients<br></li></ul></li><li>Standard Connection and Speed Hard-wired connection (no wireless)<br><ul><li>Minimum 10 mbps download / Minimum 3 mbps upload<br></li><li>Maximum Latency Threshold 120 milliseconds (ms)<br></li></ul></li><li>Monitor Recommendations<br><ul><li>1280 x 1024 (SXGA) screen resolution<br></li><li>1920 x 1080 (Full HD or 1080p)<br></li><li>Dual monitors may be required on some client programs<br></li></ul></li></ul><br><b>Mac Requirements </b><br><br>• Macs must have an Ethernet port<br>• MacBook Air and Mac USB-C ports will not be supported<br>• Boot Camp and a licensed version of Windows (please see page 2 for acceptable Windows<br>operating systems) MUST be installed. <br><br>Accessories, Software and Internet/Phone Service Providers <br><br><b>REQUIRED ACCESSORIES</b><br><br><ul><li>USB headset with microphone (required for Certification)<br><ul><li>Logitech, Plantronics, Microsoft, or similar brands recommended.<br></li></ul></li></ul>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Suggestions:<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Plantronics PLNAUDIO478 USB<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Logitech USB H570e<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Jabra UC VOICE 150<br><ul><li>Hard-wired Telephone and headset (required for Production/Servicing) <br><ul><li>Plantronics S12 or similar recommended<br></li></ul></li></ul><br><b>SOFTWARE</b><br><br>Internet Explorer 8, 9, 10, or 11 on<br>Windows 7, 8 or 10<br>Certain client programs may require specific versions of<br>Windows. Windows 8/8.1 not supported by some clients.<br>(Optional) Mozilla Firefox or Chrome for Windows<br>Microsoft Security Essentials for<br>Windows 7; Windows Defender for<br>Windows 8 or 10<br><br>Other security software may be incompatible and should be<br>avoided. Technical support may be refused if your company’s<br>software configuration is not compatible with the Arise<br>Platform or is determined to cause incompatibilities with client<br>required servicing software.<br><br><b>INTERNET AND PHONE SERVICE PROVIDERS</b><br><b><br></b>Hard-wired broadband Internet service via DSL, Cable, or Fiber Optic connection<br><br>The use of wireless connections to access any system at any time is prohibited, even if the connection is encrypted.<br>Connectivity to the Platform through an unauthorized Proxy Service or unauthorized VPN Service is strictly prohibited.<br>Additionally, Satellite, Microwave, and Cellular Hotspot Internet Services are not permitted.<br>USB connected modems are not supported.<br><br>Hard-wired land line telephone service<br><br>Unless stated otherwise in the opportunity announcement, most client programs are compatible with the following types<br>of services: POTS (plain old telephone service), cable telephony, digital service, or business class VoIP.<br>The service should be connected directly from the wall to your telephone.<br>Soft phones and cell phones are not permitted.<br>The servicing telephone line should not interface at any point with the computer.<br>All servicing telephone lines should not have voicemail, fax, or other features on the line (other than unlimited long<br>distance, if necessary – please see page 7 for details).<br><br>Call centers and agents have the option to use either a POTS line (plain old telephone service) or VoIP (aka digital telephone or cable telephony) to service a client program. However, call centers and agents servicing client programs that route calls through the AVG system will need to be able to dial into the AVG (786) number.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Call Centers and agents who do not have Miami area code phone numbers (305 or 786) will need to be able to dial long distance on their &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;service lines which may result in long distance charges. For that reason, bulk or unlimited long-distance service plans are recommended and &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;available from most carriers to avoid per-minute charges.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• A small number of client programs currently prohibit the use of VoIP while servicing and a POTS line will be required to service those programs. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;If the client program does not currently allow VoIP, agents will not be servicing on AVG.<br><br>Please be sure to review the opportunity announcement in detail to see if AVG is required on the client program you select.<br><br><br><span></span><h3>Benefits</h3><ul><li>Work from home<br></li><li>Determine your own work schedule<br></li><li>Scalable income opportunity</li></ul><br><br></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "kjWjXwI1RUago4Vq0AC3Wg",
     "url": "https://problogger.com/jobs/job/wanted-military-historian-podcast-host/",
     "title": "Wanted: Military Historian Podcast Host",
