--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,105 @@
 {
  "items": [
   {
+    "id": "vgy_F3iIToCbpYanQwjCLQ",
+    "url": "https://jobmote.com/job/4658554/remote-greeter-proctor-temporary/",
+    "title": "Remote Greeter/Proctor, Temporary",
+    "tags": [
+      "DBG:surround``2N(remot, posit)",
+      "DBG:surround``your W own W equip",
+      "DBG_TECH1:k/t/w:vue.js/frontend/32",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=32}",
+      "REMOTE1/100",
+      "TECH1/frontend",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "frontend"
+    ],
+    "hiringOrganization": {
+      "name": "Pearson",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Apr 26, 2020 3:40:46 AM",
+    "validThrough": "Apr 29, 2020 3:40:46 AM",
+    "crawled": "Apr 26, 2020 4:05:11 AM",
+    "content": "<div><h3> Description</h3>    <p> We are the world’s learning company with more than 24,000 employees operating in 70 countries. We combine world-class educational content and assessment,powered by services and technology, to enable more effective teaching and personalized learning at scale. We believe that wherever learning flourishes so do people.</p>  <p> TheOnVUEGreeter and Proctorroles areresponsible forthe check- in and live monitoring of candidates who are testing remotely via Pearson VUE’s Online Proctored (OnVUE) delivery mode.Pearson VUE relies heavily upon both rolesto ensure the security and integrity of exams, and to provide a smooth and positive candidatetestingexperience.</p>  <p> The primary responsibility of greeters isto check candidates in for testing; check-in steps include verifying candidate identify via ID checkand reviewing the candidate’s testing environment to ensure security compliance.Most interactions can occur via chat, but phone contacts are also available if the greeter has a mic and/or headset.Greeters also aid and provide an escalation pathto Pearson VUE support teamswhen issues arise during the check-in process. </p>  <p> The primary responsibility of proctors is toensure a secure testing process for the duration of the exam. Proctors intervene if a candidate breaks key rules(provided to them ahead of testing)that put either exam content or the integrity of testing at risk; theserulesinclude use of a mobile phone or paper/pencil, leaving the room while testing,and allowing a third party to enter the room. Proctors also aid and provide an escalation pathto Pearson VUE support teamswhen issues arise during testing.Most interactions can occur via chat, but phone contacts are also available if the proctor has a mic and/or headset.</p>  <p> <b> Qualifications</b> </p>  <p> Successfulcandidates will have excellent communication skills,greatattention to detail and astrong customer service focus.</p>  <p> *Assignment details*</p>  <p> This is a temporary assignment scheduled to start within the next 2 weeks.It’s estimated to runapproximatelythroughearly June, although the end date may fluctuate based on changes in workload. </p>   <p> Work schedule:Work schedules would be determined based onyour availability responses as well as theavailable testingschedules. </p>    <p> Work location: This is a remote position. All work will be performed from home using your own equipment.</p>   <p> Pearson is an Equal Opportunity and Affirmative Action Employer and a member of E-Verify. All qualified applicants, including minorities, women, protected veterans, and individuals with disabilities are encouraged to apply.</p>  <p> <b></b></p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "vcQRGQoLTy6o-8ofTfoIJg",
+    "url": "https://jobmote.com/job/4628892/remote-inpatient-coders/",
+    "title": "Remote Inpatient Coders",
+    "tags": [
+      "DBG:surround``fulltim 4N remot",
+      "DBG:surround``remot 3N OR(options, avail, allow) NOT encourag",
+      "REMOTE1/50",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "FHIMA",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Apr 26, 2020 2:59:29 AM",
+    "validThrough": "Apr 29, 2020 2:59:29 AM",
+    "crawled": "Apr 26, 2020 3:05:12 AM",
+    "content": "<div><h3> Job Description:</h3>   <p> Remote Inpatient HIM Coders: In Record Time is in need of multiple highly-experienced, credentialed Remote Inpatient Coders. Part-time and full-time remote coding opportunities available. Must have excellent computer skills and experience with a variety of EMR systems. RHIA, RHIT, CCS and/or CPC credential with at least three (3) years of hospital Inpatient coding coding experience. Immediate opportunities available!</p> <p> <b> Required Qualifications:</b> </p> <p> Minimum of 5 years of hospital Inpatient coding experience</p> <p> 3M</p> <p> CCS, RHIA or RHIT</p> <p> <b> Preferred Qualifications:</b> </p> <p> EPIC</p> <p> <b></b></p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "wwAA6iEPQQejiJPejjBoVg",
     "url": "https://jobmote.com/job/4577429/p-c-insurance-agent-wanted-best-work-from-home-opportunity/",
     "title": "P&C insurance agent wanted - best work from home opportunity",
@@ -1481,53 +1580,6 @@
     "validThrough": "Apr 8, 2020 7:40:56 PM",
     "crawled": "Apr 24, 2020 8:10:03 PM",
     "content": "SINCH<p>We do messaging. We route billions of SMS and other kinds of messages every year.</p><p>We're a pretty international crowd, and we've helped lots of people relocate and helped with visas and things. We're even open to remote workers.</p><p>A smattering of our techie jobs:</p><p>USA:</p><p>* Head of Platform Integrations | Seattle <a href='https://wrkbl.ink/ggljiBJ' rel='nofollow'>https://wrkbl.ink/ggljiBJ</a></p><p>* Technical Solution Architect | Seattle <a href='https://wrkbl.ink/hUONDGM' rel='nofollow'>https://wrkbl.ink/hUONDGM</a></p><p>* Growth Marketing Lead | Seattle <a href='https://wrkbl.ink/6FrO23g' rel='nofollow'>https://wrkbl.ink/6FrO23g</a></p><p>* Service Implementation Specialist (Spanish Speaking) | Atlanta <a href='https://wrkbl.ink/gKRRk1A' rel='nofollow'>https://wrkbl.ink/gKRRk1A</a></p><p>Sweden:</p><p>* Head of BI and Data platform | Malmö <a href='https://wrkbl.ink/d6BKI8o' rel='nofollow'>https://wrkbl.ink/d6BKI8o</a></p><p>* Data Engineer | Malmö <a href='https://wrkbl.ink/4RzZgCg' rel='nofollow'>https://wrkbl.ink/4RzZgCg</a></p><p>* Software Developer Fullstack (Node.JS, React) | Malmö <a href='https://wrkbl.ink/ioTC20A' rel='nofollow'>https://wrkbl.ink/ioTC20A</a></p><p>* Software Developer Backend (Java) | Malmö <a href='https://wrkbl.ink/7gXaCD8' rel='nofollow'>https://wrkbl.ink/7gXaCD8</a></p><p>* Software Developer Backend (Java) | Malmö <a href='https://wrkbl.ink/edXsh7V' rel='nofollow'>https://wrkbl.ink/edXsh7V</a></p><p>* Software Developer Fullstack | Stockholm <a href='https://wrkbl.ink/4jGqtNQ' rel='nofollow'>https://wrkbl.ink/4jGqtNQ</a></p><p>* Software Developer | Kalmar <a href='https://wrkbl.ink/8c4WuwK' rel='nofollow'>https://wrkbl.ink/8c4WuwK</a></p><p>UK:</p><p>* Software Developer Backend | London <a href='https://wrkbl.ink/4jp5CQk' rel='nofollow'>https://wrkbl.ink/4jp5CQk</a></p><p>* Software Developer Frontend | London <a href='https://wrkbl.ink/bvFaLvN' rel='nofollow'>https://wrkbl.ink/bvFaLvN</a></p><p>Singapore:</p><p>* Back Office Engineer <a href='https://wrkbl.ink/f9DMvHS' rel='nofollow'>https://wrkbl.ink/f9DMvHS</a></p>",
-    "place1": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    },
-    "place2": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    }
-  },
-  {
-    "id": "GNx_HEFgQmO3anTZcYsZww",
-    "url": "http://workinstartups.com/job-board/job/90904/marketingbrand-genius-required-at-audacity/",
-    "title": "Marketing/Brand Genius required",
-    "tags": [
-      "DBG:surround``4N( OR(virtual,distribut,scatter), OR(compani,team,OR(organ,organis)))",
-      "REMOTE1/100",
-      "TECH1/unknown",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "unknown"
-    ],
-    "hiringOrganization": {
-      "name": "Audacity",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "parser": "SalaryParserWithNoiseImpl",
-      "isEquity": false,
-      "formatted": ""
-    },
-    "employmentType": "UNSET",
-    "published": "Apr 1, 2020 2:14:46 PM",
-    "validThrough": "Apr 8, 2020 2:14:46 PM",
-    "crawled": "Apr 24, 2020 8:09:14 PM",
-    "content": "<p>Marketing genius required for a successful organization.</p><br /><p>Should be a great team player with the energy and determination to get things done.</p><br /><ul><br /><li>Communication &amp; Brand development</li><br /><li>Develop Marketing copy &amp; communication materials</li><br /><li>Market research, growth hacking &amp; user comms</li><br /></ul><br /><p>You should have proven and demonstrable experience developing nascent brands.</p><br /><p>Audacity are a decentralised organisation and pre-venture company with two production products.</p><br /><p>We are developers, PhDs and mathematicians with world class technical skills, seeking develop our business communications.</p><br /><p>Note that this is a co-founder position.</p><br /><p>We are remote and believe that work should revolve around our lives. However we have members in London, Berlin and Lisbon if you prefer co-location.</p><br /><p>About Us: Audacity create platforms and systems for distributed teams. We believe human relationships are paramount in any distributed organisation and have made this central not only in how we operate as an organisation but also in the tools which we develop.</p><br /><p>https://www.audacity.id/</p>",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
