json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,204 @@
 {
  "items": [
   {
+    "id": "akn558diR_SuFmo9Jn8XTg",
+    "url": "https://jobmote.com/job/4669179/p-c-insurance-agent-wanted-best-work-from-home-opportunity/",
+    "title": "P&C insurance agent wanted - best work from home opportunity",
+    "tags": [
+      "DBG:surround``3N( OR(feasibl,OR(consid,consider),option,occas,opportun,possibl,abil), OR(3N(remot, work),telecommut,2N(work,home)) ) NOT OR(regularli, abracadabra)",
+      "DBG_TECH1:k/t/w:c/c/15",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=15, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/c",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "c"
+    ],
+    "hiringOrganization": {
+      "name": "Assurance",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Apr 27, 2020 2:24:08 AM",
+    "validThrough": "Apr 30, 2020 2:24:08 AM",
+    "crawled": "Apr 27, 2020 3:05:13 AM",
+    "content": "<div><p><span>Assurance is the first and only platform to pair top insurance agents with data-driven technology to make the buying and selling experience timely, personalized, and simple.</span></p><p><span>Enjoy the freedom of working for yourself, and leave the marketing and admin work to ASSURANCE.</span></p><p><span>Join the ASSURANCE agent network, and enjoy these benefits::</span></p><ul><li><span>100% qualified, inbound shoppers generated from ASSURANCE-owned and operated websites</span></li><li><span>Free access to our proprietary system</span></li><li><span>Well-known and trusted carriers</span></li><li><span>100s of Guides prospecting for you</span></li><li><span>A+ BBB-accredited and proven</span></li><li><span>Unlimited income potential with no chargebacks and weekly bonus opportunities</span></li><li><span>Daily support meetings (voluntary)</span></li></ul><p><span>Requirements to access ASSURANCE platform:</span></p><ul><li><span>At least 10 P&amp;C state licenses, 8 of which should be in AR, AZ, CO, CT, IA, ID, IL, IN, MO, MS, NC, ND, NE, NM, OH, OK, OR, PA, SC, SD, TN, TX, UT, VA, WI, WV, WY</span></li><li><span>At least 1 year of telesales experience selling P&amp;C products</span></li><li><span>Prior work as a captive agent or in an independent agency or call center</span></li><li><span>Very reliable computer and headset</span></li><li><span>High speed Internet connection</span></li><li><span>Self-driven and hungry</span></li><li><span>Able to establish yourself as an expert and provide policy guidance with the highest integrity</span></li><li><span>Persistence and systematic in the follow up to chase down shoppers after the first call</span></li><li><span>Active errors &amp; omissions coverage</span></li><li><span>Experience with multiple carrier products and using a comparative rater is a preferred</span></li></ul></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "b4g7jO-xRCuy8e30YHe_5A",
+    "url": "https://jobmote.com/job/4669177/telecommute-bilingual-serbian-medical-translator/",
+    "title": "Telecommute Bilingual Serbian Medical Translator",
+    "tags": [
+      "DBG:surround``3N(telecommut, posit) NOT fulltim",
+      "REMOTE1/50",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "VirtualVocations",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Apr 27, 2020 2:24:07 AM",
+    "validThrough": "Apr 30, 2020 2:24:07 AM",
+    "crawled": "Apr 27, 2020 3:05:13 AM",
+    "content": "<div>A translation and localization company is searching for a person to fill their position for a Telecommute Bilingual Serbian Medical Translator.Core Responsibilities Include:Translating and editing of content related to medical devicesProcessing proximately 5000 words per weekApplicants must meet the following qualifications:3+ years experience in translation and/or editing of medical devicesProficient use of CAT tools, especially memoQ/Memsource/XTMReliable, high-speed internet connection</div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "MCuU5NwfRtm0EZbIC87avg",
+    "url": "https://jobmote.com/job/4669170/p-c-insurance-agent-wanted-best-work-from-home-opportunity/",
+    "title": "P&C insurance agent wanted - best work from home opportunity",
+    "tags": [
+      "DBG:surround``3N( OR(feasibl,OR(consid,consider),option,occas,opportun,possibl,abil), OR(3N(remot, work),telecommut,2N(work,home)) ) NOT OR(regularli, abracadabra)",
+      "DBG_TECH1:k/t/w:c/c/15",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=15, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/c",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "c"
+    ],
+    "hiringOrganization": {
+      "name": "Assurance",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Apr 27, 2020 2:24:07 AM",
+    "validThrough": "Apr 30, 2020 2:24:07 AM",
+    "crawled": "Apr 27, 2020 3:05:13 AM",
+    "content": "<div><p><span>Assurance is the first and only platform to pair top insurance agents with data-driven technology to make the buying and selling experience timely, personalized, and simple.</span></p><p><span>Enjoy the freedom of working for yourself, and leave the marketing and admin work to ASSURANCE.</span></p><p><span>Join the ASSURANCE agent network, and enjoy these benefits::</span></p><ul><li><span>100% qualified, inbound shoppers generated from ASSURANCE-owned and operated websites</span></li><li><span>Free access to our proprietary system</span></li><li><span>Well-known and trusted carriers</span></li><li><span>100s of Guides prospecting for you</span></li><li><span>A+ BBB-accredited and proven</span></li><li><span>Unlimited income potential with no chargebacks and weekly bonus opportunities</span></li><li><span>Daily support meetings (voluntary)</span></li></ul><p><span>Requirements to access ASSURANCE platform:</span></p><ul><li><span>At least 10 P&amp;C state licenses, 8 of which should be in AR, AZ, CO, CT, IA, ID, IL, IN, MO, MS, NC, ND, NE, NM, OH, OK, OR, PA, SC, SD, TN, TX, UT, VA, WI, WV, WY</span></li><li><span>At least 1 year of telesales experience selling P&amp;C products</span></li><li><span>Prior work as a captive agent or in an independent agency or call center</span></li><li><span>Very reliable computer and headset</span></li><li><span>High speed Internet connection</span></li><li><span>Self-driven and hungry</span></li><li><span>Able to establish yourself as an expert and provide policy guidance with the highest integrity</span></li><li><span>Persistence and systematic in the follow up to chase down shoppers after the first call</span></li><li><span>Active errors &amp; omissions coverage</span></li><li><span>Experience with multiple carrier products and using a comparative rater is a preferred</span></li></ul><p>by Jobble</p><br> Associated topics: agent, call center, customer, guest, healthcare, life insurance sales, phone, retail, sales agent, sell</div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "v6JHo9AOS8ugKwHXboFD5w",
+    "url": "http://workinstartups.com/job-board/job/91485/founding-member-for-operations-%e2%80%93-clinical-artificial-intelligence-start-up-at-youdiagnose/",
+    "title": "Founding Member for operations – Clinical Artificial Intelligence Start-Up",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG_TECH1:k/t/w:artificial-intelligence/bigdata-ml/16",
+      "DBG_TECH1:k/t/w:computer-vision/bigdata-ml/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=24, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/bigdata-ml",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "bigdata-ml"
+    ],
+    "hiringOrganization": {
+      "name": "YouDiagnose",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Apr 26, 2020 3:18:27 PM",
+    "validThrough": "May 3, 2020 3:18:27 PM",
+    "crawled": "Apr 26, 2020 5:05:17 PM",
+    "content": "<p><strong><u>Founding Member for operations &ndash; Clinical Artificial Intelligence Start-Up</u></strong></p><br /><p>&nbsp;</p><br /><p><strong>Summary </strong></p><br /><p><strong>&nbsp;</strong></p><br /><p>Most of the clinical AI solutions in the market have got general practice focus and therefore do not provide the cancer-specific outcome. Given the COVID 19 Pandemic, bringing the whole world to a lockdown, institutions worldwide are looking to adopt artificial intelligence to overcome the manual clinical workflow in community and cancer care. We want to move from technology readiness level (TRL) 4 to 5/6 and due to coronavirus lockdown, we are looking for somebody who is in the UK mainland and will be able to be a part of our thriving team supporting operation, market analysis and investor relationships. In an industry which is predicted and known in the past to grow at 50% CAGR, this role will provide an excellent opportunity for anyone who wants their flying career. We are a month to two away from our launch and therefore it is ideal time for a founding member to join us and take a leading role in carrying out operations and investor relationships.</p><br /><p><strong>&nbsp;</strong></p><br /><p><strong>Our goal</strong></p><br /><p><strong>&nbsp;</strong></p><br /><p>Our goal is to reduce disparities in cancer care by using next-generation technologies such as artificial intelligence and next-generation genomic sequencing. We use patient data collected for clinical purposes to answer various types of clinical questions for patient care.</p><br /><p>&nbsp;</p><br /><p><strong>Responsibilities</strong></p><br /><p><strong>&nbsp;</strong></p><br /><p>The primary responsibilities will include</p><br /><ol><br /><li>Maintaining relationship with investors</li><br /><li>Exploring the market landscape for our clinical AI product is one of essential component of this role. should have the sales skills to be able to lease with NHS systems clinicians and GPs and healthcare networks.</li><br /><li>Accelerate adoption of our products at hospital communities NHS and healthcare organizations.</li><br /></ol><br /><p>&nbsp;</p><br /><p>Qualifications</p><br /><p>&nbsp;</p><br /><p>Start-up mindset - it is important for the applicant to be resilient and passionate in overcoming the challenges and lead initiative in business development. It is therefore important that the applicant is proactive, driven and determined.</p><br /><p>&nbsp;</p><br /><p>Background and exposure in healthcare is mandatory. However, those who are generalists who have a desire to be specialists in healthcare are also welcome to apply.</p><br /><p>The applicant can be of one of the categories</p><br /><ul><br /><li>MBA from a reputed institution.</li><br /><li>Past proven track record of sales, business building, operation and marketing is desirable.</li><br /><li>Anyone who is a serial entrepreneur or played a co-founder role in a previous company.</li><br /></ul><br /><p>&nbsp;</p><br /><p>Strong IT skills, familiarity with the web technologies, general marketing skills such as business communication, fundraising is a desirable part of this role.</p><br /><p>&nbsp;</p><br /><p>The applicant will be required to cross over and help other teams when required from time to time.</p><br /><p><strong>&nbsp;</strong></p><br /><p><strong>Time Commitment + Location</strong></p><br /><ul><br /><li>Time-commitment - Variable as needed till the phase of seed-funding and then continuous steering of the company activities to ensure we sustain the growth trajectory and reach the milestones in time.</li><br /><li>UK location preferable.</li><br /><li>Virtual remote working during COVID lockdown is a possibility</li><br /></ul><br /><p><strong>Remuneration</strong></p><br /><ul><br /><li>Delayed compensation plan till seed funding.</li><br /><li>Salary + Equity - Negotiable, Top of Industry Standards of Payment, Subject to Performance and Past Experience.</li><br /></ul><br /><p><strong>Why Join YouDiagnose?&nbsp;</strong></p><br /><p><a href='https://youtu.be/CQSxmFcLQfo'>https://youtu.be/CQSxmFcLQfo</a>&nbsp;</p><br /><p>&nbsp;</p><br /><p><strong>Advantages of Joining YouDiagnose</strong></p><br /><p>&nbsp;</p><br /><ul><br /><li>Opportunity to learn and grow in the area of clinical informatics, clinical AI and clinical ML</li><br /><li>Provides a unique opportunity to play a leadership role in healthcare transformation of the country and of the whole world.</li><br /><li>Hughes leadership opportunity for candidates who show passion, commitment and integrity</li><br /></ul><br /><p><strong>Website</strong> - <a href='https://www.youdiagnose.online/'>https://www.youdiagnose.online/</a>&nbsp;</p><br /><p>&nbsp;</p><br /><ul><br /><li>* Sound interesting? if you think you have the best composition of the above, send us your Cv and let's chat!</li><br /></ul><br /><p>&nbsp;</p>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "vgy_F3iIToCbpYanQwjCLQ",
     "url": "https://jobmote.com/job/4658554/remote-greeter-proctor-temporary/",
     "title": "Remote Greeter/Proctor, Temporary",
